Corrected single index.html.

--- a/Obvestila/Navodila/index.html
+++ b/Obvestila/Navodila/index.html
@@ -8,8 +8,8 @@
         <script src="../../_common/modules/ext/jquery/1.7/jquery.min.js"></script>
         <script src="../../_common/modules/ext/angular/angular.min.js"></script>
         <script src="../../_common/modules/ext/jschannel/jschannel.js"></script>
-        <script src="../../_common/modules/integrationAPI.01/official/platform-pr.js"></script>
-        <script src="../../_common/modules/pemFioi/static-task.js"></script> -->
+        <script src="../../_common/modules/integrationAPI.01/official/platform-pr.js"></script> -->
+        <script src="../../_common/modules/pemFioi/static-task.js"></script>
     </head>
 
     <body>
