Change margin and testing two additional imports.

--- a/Obvestila/Navodila/index.html
+++ b/Obvestila/Navodila/index.html
@@ -4,9 +4,10 @@
         <meta charset="utf-8"/>
         <title>Navodila</title>
         <link class="task" type="text/css" rel="stylesheet" href="../../_common/modules/ext/bootstrap/css/bootstrap.min.css"/>
-        <!--<link class="task" type="text/css" rel="stylesheet" href="../../_common/modules/pemFioi/progTask.css"/>
+        <!--<link class="task" type="text/css" rel="stylesheet" href="../../_common/modules/pemFioi/progTask.css"/> -->
         <script src="../../_common/modules/ext/jquery/1.7/jquery.min.js"></script>
-        <script src="../../_common/modules/ext/angular/angular.min.js"></script> -->
+        <script src="../../_common/modules/ext/angular/angular.min.js"></script>
+        
         <script src="../../_common/modules/ext/jschannel/jschannel.js"></script>
         <script src="../../_common/modules/integrationAPI.01/official/platform-pr.js"></script>
         <script src="../../_common/modules/pemFioi/static-task.js"></script>
@@ -14,7 +15,7 @@
 
     <body>
         <div class="container">
-            <div style="padding: 1em; background-color: rgba(130,191,43,0.3)">
+            <div style="padding: 1em; margin-top: 1em; background-color: rgba(130,191,43,0.3)">
                 <h1>Kaj je Pišek <img src="pisek.png" width="64px"></h1>
                 <p>
                     Portal Pišek je nastal leta 2018 z željo ponuditi slovenskemu šolskemu prostoru sklop nalog, ki se jih rešuje s slikovnim programskim jezikom. S tem naj bi predstavljal nekakšen most med nalogami v Mednarodnem tekmovanju iz računalniškega razmišljanja – <a href="https://bober.acm.si/" target="_blank">Bober</a> in Srednješolskem tekmovanju ACM iz računalništva in informatike – <a href="http://rtk.ijs.si/" target="_blank">RTK</a>. Glavnina nalog na portalu Pišek je bila drugače dodana leta 2019 v sklopu projekta <i>Naloge za poučevanje in učenje računalniškega mišljenja - Portal Pišek (NPUR)</i>, pri katerem sodelujeta <a href="https://www.fmf.uni-lj.si" target="_blank">Fakulteta za matematiko in fiziko</a> in <a href="https://www.poligon.si/" target="_blank">Poligon, kreativni center</a>. Na portalu so ustvarjene 4 učne poti (Zgodbe, Programski koncepti, Učbenik, Code Week), ali 4 metode uporabe za pridobivanje znanja iz programiranja v slikovnem programskem jeziku Blockly. Vse učne poti so smiselno zasnovane, tako glede na težavnost nalog kot glede na možnost preverjanja znanja, od učencev in učiteljev oziroma od dijakov in profesorjev pa bo odvisno, kako in na kakšen način se bo portal najbolje uporabljalo.
