--- a/noviPisek/libraryTesting/exercises/Users/Ziga_Cerne/Cebelica_Maja/Cebelica_Maja_OS79Z/index.html
+++ b/noviPisek/libraryTesting/exercises/Users/Ziga_Cerne/Cebelica_Maja/Cebelica_Maja_OS79Z/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
 		<meta charset="utf-8">	<!-- določimo način kodiranja znakov v besedilu naloge -->
-		<title>pot_cez_globel</title> <!-- pod naslov zapišemo ime mape v kateri se nahajo datoteke za posamezno nalogo -->
+		<title>cebelica_maja</title> <!-- pod naslov zapišemo ime mape v kateri se nahajo datoteke za posamezno nalogo -->
 		<script>
 			window.stringsLanguage = 'sl'; //izberemo jezik za besedila ukazov in sporočil
 		</script>
@@ -41,7 +41,7 @@
 		<!-- Tukaj uvozimo knjiznico -->	
 		<script class="remove" type="text/javascript" src="../../../../../library/blocklyRobot_lib.js" id="blocklyRobot_lib"></script>
 		<!-- Tukaj kličemo datoteko, kjer definiramo problem naloge -->		
-		<script type="text/javascript" src="task_m.js"></script>
+		<script type="text/javascript" src="task.js"></script>
 		<script>
 			// initWrapper(initTask, ["easy","medium","hard"], null, true);
 			initWrapper(initTask, null, null, true);
