--- a/noviPisek/libraryTesting/exercises/Users/Ziga_Cerne/testGumbov_OG/index.html
+++ b/noviPisek/libraryTesting/exercises/Users/Ziga_Cerne/testGumbov_OG/index.html
@@ -9,7 +9,7 @@
 			
 		<!-- Tukaj kličemo knjižnice potrebne za delovanje spletne strani -->
 		<script class="remove" type="text/javascript" src="../../../../../../_common/modules/pemFioi/importModules-1.4-mobileFirst.js" id="import-modules"></script> 
-		<!-- <script class="remove" type="text/javascript" src="../../../../_common/modules/pemFioi/importModules-1.5.js" id="import-modules"></script>  -->
+		<!-- <script class="remove" type="text/javascript" src="../../../../../_common/modules/pemFioi/importModules-1.5.js" id="import-modules"></script>  -->
 		<script class="remove" type="text/javascript">
 			var modulesPath = '../../../../../../_common/modules/'
 			importModules([
@@ -55,9 +55,15 @@
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
 					<p>
-						Animacija vrat ne deluje za večkoračne premike.
+						Testiranje nove knjižnice
+						</p>
+						Ovire - Spavnaš lahko na oviri<br>
+						robot lahko pobegne diagonalno med dvema ovirama. <br>
+						Če je robot ovira lahko še vedno zapelje čez robota, ki ni ovira.<br>
+						Če je robot ovira lahko še vedno zapelje čez robota, ki ni ovira.<br>
+						Če robot1 pobere robota2, robot1 izgine v eter<br>
+						Če zamenjaš vlogo medtem ko nosiš robota vrne napako. <br>
 					</p>
-					
 				
 				</div>
 				<div id="gridContainer"></div>
