--- a/noviPisek/libraryTesting/exercises/Users/Ziga_Cerne/Cebelica_Maja/Cebelica_Maja_SŠZ/index.html
+++ b/noviPisek/libraryTesting/exercises/Users/Ziga_Cerne/Cebelica_Maja/Cebelica_Maja_SŠZ/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
 		<meta charset="utf-8">	<!-- določimo način kodiranja znakov v besedilu naloge -->
-		<title>pot_cez_globel</title> <!-- pod naslov zapišemo ime mape v kateri se nahajo datoteke za posamezno nalogo -->
+		<title>cebelica_maja</title> <!-- pod naslov zapišemo ime mape v kateri se nahajo datoteke za posamezno nalogo -->
 		<script>
 			window.stringsLanguage = 'sl'; //izberemo jezik za besedila ukazov in sporočil
 		</script>
