Popravil in naložil naloge na server.

--- a/noviPisek/libraryTesting/exercises/Users/Ziga_Cerne/Pisek_na_orientacijskem_tekmovanju/easy/index.html
+++ b/noviPisek/libraryTesting/exercises/Users/Ziga_Cerne/Pisek_na_orientacijskem_tekmovanju/easy/index.html
@@ -50,13 +50,15 @@
     
 	<body onresize="task.displayedSubTask.updateScale()">
 		<div id="task">
-            <h1>Tačko in skrivalnice</h1>  <!-- Naslov naloge -->
+            <h1>Pišek na orientaciji</h1>  <!-- Naslov naloge -->
 			<div id="tabsContainer"></div>
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
 					<p>
-						Marko se v gozdu s svojim psičkom Tačkom rad igra skrivalnice. Napiši program, ki bo Tačkov izostreni smrček vodil do vseh priboljškov in ga pripeljal do svojega lastnika. Pazi, število delčkov je omejeno, zato si dobro oglej sliko in poišči vzorec.
-						<br>
+						Pišek se je udeležil orientacijskega tekmovanja. Ko prispe na polje s številko, mu to pove, v katero smer naj
+						gre (1 desno, 2 dol, 3 levo, 4 gor). Na naslednjem polju izve, koliko korakov je do kontrolne točke. Na
+						kontrolni točki dobi nagradne točke. Na naslednjem polju izve novo smer gibanja. Ko nabere 20 točk ali več,
+						je uspešno opravil nalogo!						<br>
 						Manjka ponovno pogoj, da pride do Miha (checkGreeenArea v prejšnji knjižnjici).			
 					</p>
 				</div>
