--- a/noviPisek/libraryTesting/exercises/Users/Ziga_Cerne/nalogeUcenci/andrej/index.html
+++ b/noviPisek/libraryTesting/exercises/Users/Ziga_Cerne/nalogeUcenci/andrej/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
 		<meta charset="utf-8">	<!-- določimo način kodiranja znakov v besedilu naloge -->
-		<title>pisek in jajca</title> <!-- pod naslov zapišemo ime mape v kateri se nahajo datoteke za posamezno nalogo -->
+		<title>Pisek_na_orientacijskem_tekmovanju</title> <!-- pod naslov zapišemo ime mape v kateri se nahajo datoteke za posamezno nalogo -->
 		<script>
 			window.stringsLanguage = 'sl'; //izberemo jezik za besedila ukazov in sporočil
 		</script>
@@ -50,7 +50,7 @@
     
 	<body onresize="task.displayedSubTask.updateScale()">
 		<div id="task">
-            <h1>Čebelica Maja</h1>  <!-- Naslov naloge -->
+            <h1>Pišek na orientacijskem tekmovanju</h1>  <!-- Naslov naloge -->
 			<div id="tabsContainer"></div>
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
