--- a/noviPisek/libraryTesting/exercises/Users/Anton/Raztrescena_raketa/index.html
+++ b/noviPisek/libraryTesting/exercises/Users/Anton/Raztrescena_raketa/index.html
@@ -43,7 +43,9 @@
             <div id="taskIntro" style="width: 100%">
 			
                <p class = "easy">
-                  Robot je naletel na razbitine rakete, ki se je raztreščila ob zasilnem pristanku. Pomagaj robotu zbrati razibitne, da lahko raketo popravi in zapusti Luno. Robot dele rakete pobere, ko se premakne na polje z njimi. 
+                  Robot je naletel na razbitine rakete, ki se je raztreščila ob zasilnem pristanku. 
+                  Pomagaj robotu zbrati razibitne, da lahko raketo popravi in zapusti Luno. 
+                  Robot dele rakete pobere, ko se premakne na polje z njimi. 
 				  </p>
             </div>
             <div id="gridContainer"></div>
