--- a/noviPisek/libraryTesting/exercises/Users/Anton/premikanje_robota_new/index.html
+++ b/noviPisek/libraryTesting/exercises/Users/Anton/premikanje_robota_new/index.html
@@ -59,7 +59,7 @@
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
 					<p >
-                  Drugi test, ki ga mora robot prestati, je test pobiranja. Na misijah bo imel robot veliko opravka s pobiranjem stvari. Od pobiranja testnih vzorcev do rokovanja z vesoljsko opremo. Zato mora robot pri tem testu pobrati vse kapsule. Kapsulo robot pobere samodejno, če stopi na polje s kapsulo. Pomagaj mu prestati teste!
+						Prvi test, ki ga mora robot prestati, preden lahko začne z misijami, je test premikanja. Robot bo prestal test, če pride po najkrajši možni poti na označeno polje. Pomagaj mu!
               </p>
 					<div>
 						
