--- a/noviPisek/libraryTesting/exercises/Users/Anton/raztrescena_raketa_new/index.html
+++ b/noviPisek/libraryTesting/exercises/Users/Anton/raztrescena_raketa_new/index.html
@@ -59,7 +59,9 @@
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
 					<p >
-                  Drugi test, ki ga mora robot prestati, je test pobiranja. Na misijah bo imel robot veliko opravka s pobiranjem stvari. Od pobiranja testnih vzorcev do rokovanja z vesoljsko opremo. Zato mora robot pri tem testu pobrati vse kapsule. Kapsulo robot pobere samodejno, če stopi na polje s kapsulo. Pomagaj mu prestati teste!
+						Robot je naletel na razbitine rakete, ki se je raztreščila ob zasilnem pristanku. 
+						Pomagaj robotu zbrati razibitne, da lahko raketo popravi in zapusti Luno. 
+						Robot dele rakete pobere, ko se premakne na polje z njimi. 
               </p>
 					<div>
 						
