--- a/noviPisek/libraryTesting/exercises/Users/Blaz/Pisek_zoba_zrna_new/index.html
+++ b/noviPisek/libraryTesting/exercises/Users/Blaz/Pisek_zoba_zrna_new/index.html
@@ -58,9 +58,14 @@
 			<div id="tabsContainer"></div>
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
-					<p >
-                  Drugi test, ki ga mora robot prestati, je test pobiranja. Na misijah bo imel robot veliko opravka s pobiranjem stvari. Od pobiranja testnih vzorcev do rokovanja z vesoljsko opremo. Zato mora robot pri tem testu pobrati vse kapsule. Kapsulo robot pobere samodejno, če stopi na polje s kapsulo. Pomagaj mu prestati teste!
-              </p>
+					<p>
+						Pišek se prebudi v zaspano jutro. Lačen se ozira za hrano. Popelji piška tako, da bo pozobal obe zrni.
+						</p>
+					<p>
+						Pišek je zelo lačen, zato zrno pozoba takoj, ko ga najde.</p>
+					<p>
+						Naloga ima več možnih rešitev. LOL3
+					</p>
 					<div>
 						
 					</div>
