Posodobil še nekaj nalog grafikov

--- a/noviPisek/libraryTesting/exercises/Users/Korl/Zakopani_kovancki/Easy/index.html
+++ b/noviPisek/libraryTesting/exercises/Users/Korl/Zakopani_kovancki/Easy/index.html
@@ -7,9 +7,9 @@
       <script>
       window.stringsLanguage = 'sl';
       </script>
-      <script class="remove" type="text/javascript" src="../../../../_common/modules/pemFioi/importModules-1.1.js" id="import-modules"></script>
+      <script class="remove" type="text/javascript" src="../../../../../../../_common/modules/pemFioi/importModules-1.1.js" id="import-modules"></script>
       <script class="remove" type="text/javascript">
-        var modulesPath = '../../../../_common/modules/'
+        var modulesPath = '../../../../../../../_common/modules/'
         importModules([
             'jquery-1.7.1', 'JSON-js', 'raphael-2.2.1', 'beaver-task-2.0', 'jschannel', 'raphaelFactory-1.0', 'delayFactory-1.0', 'simulationFactory-1.0',
             'platform-pr', 'buttonsAndMessages', 'beav-1.0', 'installationAPI.01', 'miniPlatform',
@@ -48,17 +48,17 @@
                <p>
                    Lačni zmajček pride do travnika, na katerem iz tal štrlijo kovanci. Pomagaj zmajčku odkopati kovance.
                </p>
-                <p>
-S kocko ‘če’ lahko preveriš, ali je zmajčkovem polju zakopan kovanec.
- </p> <p>
-Namig: Zmajček se mora 14-krat premakniti desno, da doseže zadnji kovanec.
-
-                  </p>
+               <p>
+                  S kocko ‘če’ lahko preveriš, ali je zmajčkovem polju zakopan kovanec.
+               </p> 
+               <p>
+                  Namig: Zmajček se mora 14-krat premakniti desno, da doseže zadnji kovanec.
+               </p>
                   <p data-lang="blockly">
-                     <img src="example_if.png" style="width:250px"/>
+                     <img src="primeri/example_if.png" style="width:250px"/>
                   </p>
                   <p data-lang="scratch">
-                     <img src="example_if_scratch.png" style="width:200px"/>
+                     <img src="primeri/example_if_scratch.png" style="width:200px"/>
                   </p>
                  
                </div>
