--- a/noviPisek/libraryTesting/exercises/Users/Gasper/smucar/index.html
+++ b/noviPisek/libraryTesting/exercises/Users/Gasper/smucar/index.html
@@ -8,10 +8,10 @@
 		</script>
 			
 		<!-- Tukaj kličemo knjižnice potrebne za delovanje spletne strani -->
-		<script class="remove" type="text/javascript" src="../../../../_common/modules/pemFioi/importModules-1.4-mobileFirst.js" id="import-modules"></script> 
+		<script class="remove" type="text/javascript" src="../../../../../../_common/modules/pemFioi/importModules-1.4-mobileFirst.js" id="import-modules"></script> 
 		<!--  <script class="remove" type="text/javascript" src="../../../_common/modules/pemFioi/importModules-1.1.js" id="import-modules"></script> -->
 		<script class="remove" type="text/javascript">
-			var modulesPath = '../../../../_common/modules/'
+			var modulesPath = '../../../../../../_common/modules/'
 			importModules([
 				'jquery-1.7.1', 'JSON-js', 'raphael-2.2.1', 'beaver-task-2.0', 'jschannel', 'raphaelFactory-1.0', 'delayFactory-1.0', 'simulationFactory-1.0',
 				'platform-pr', 'buttonsAndMessages', 'beav-1.0', 'installationAPI.01', 'miniPlatform',
