--- a/noviPisek/libraryTesting/exercises/Users/Korl/Pisek_in_labirint/index.html
+++ b/noviPisek/libraryTesting/exercises/Users/Korl/Pisek_in_labirint/index.html
@@ -6,9 +6,9 @@
     <script>
         window.stringsLanguage = 'sl';
     </script>
-    <script class="remove" type="text/javascript" src="../../../../_common/modules/pemFioi/importModules-1.1.js" id="import-modules"></script>
+    <script class="remove" type="text/javascript" src="../../../../../../_common/modules/pemFioi/importModules-1.1.js" id="import-modules"></script>
     <script class="remove" type="text/javascript">
-        var modulesPath = '../../../../_common/modules';
+        var modulesPath = '../../../../../../_common/modules';
         importModules([
             'jquery-1.7.1', 'jquery-ui.touch-punch', 'raphael-2.2.1', 'JSON-js',
             'beav-1.0', 'beaver-task-2.0', 'simulation-2.0', 'raphaelFactory-1.0',
