redesign vecih nalog

--- a/noviPisek/libraryTesting/exercises/Users/Ziga_Cerne/Zacetna_Janko_Metka/index.html
+++ b/noviPisek/libraryTesting/exercises/Users/Ziga_Cerne/Zacetna_Janko_Metka/index.html
@@ -55,11 +55,9 @@
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
 					<p>
-						Zagotovo poznaš zgodbo o Janku in Metki. Odpravila sta se v gozd in da se ne bi zgubila, sta si pot do hiše označila z desetimi kamenčki. Zapomnila sta si, da morata vsakič, ko prideta do kamenčka, zaviti desno.
+						Pišek se je odpravil v gozd na sprehod. Da se ne bi zgubil, si je pot do doma označil s kamni. Zapomnil si je, da mora vsakič, ko pride do kamnov, zaviti desno.
 
-						Za vsak primer pa si bosta zapisala podrobna navodila v obliki programa. Vsi za program potrebni delčki so že pripravljeni na delovni površini. Ti jih le sestavi tako, da bosta Janko in Metka prišla nazaj do svoje hiše.
-
-						A pazi, isti program mora delovati pravilno tako pri razporeditvi kamenčkov za Test 1 kot tudi za Test 2.
+						Poskušaj sestaviti program tako, da bo Pišek prišel do svoje hiše. A pazi, isti program mora delovati pravilno tako pri razporeditvi kamenčkov za Test 1 kot tudi za Test 2.
 
 					</p>
 				
