--- a/4_Naloge/3_Nova_pot_1/NP_Naloge_O_sklopu_NP1.html
+++ b/4_Naloge/3_Nova_pot_1/NP_Naloge_O_sklopu_NP1.html
@@ -3,6 +3,12 @@
 <head>
 	<meta charset="utf-8"/>
 	<link class="task" type="text/css" rel="stylesheet" href="../../_common/modules/ext/bootstrap/css/bootstrap.min.css"/>
+	<link class="task" type="text/css" rel="stylesheet" href="../../_common/modules/pemFioi/progTask.css"/>
+	<script src="../../_common/modules/ext/jquery/1.7/jquery.min.js"></script>
+	<script src="../../_common/modules/ext/angular/angular.min.js"></script>
+	<script src="../../_common/modules/ext/jschannel/jschannel.js"></script>
+	<script src="../../_common/modules/integrationAPI.01/official/platform-pr.js"></script>
+	<script src="../../_common/modules/pemFioi/static-task.js"></script>
 	<title>Nova pot 1</title>
 	<style>
 		body {
