--- a/1_O_Pisku/NP_O_Pisku_Sodelujoči.html
+++ b/1_O_Pisku/NP_O_Pisku_Sodelujoči.html
@@ -26,7 +26,7 @@
 				Pri projektu NUPR v letu 2018 so sodelovali mentorji mag. Matija Lokar, dr. Gregor Jerše in slovenska ambasadorka Evropskega tedna programiranja Katja K. Ošljak ter študenti Univerze v Ljubljani in sicer Luka Čušin, Blaž Dobravec, Urška Erjavec, Zoran Fijavž, Žiga Flajs, Karel Križnar, Ajda Lah, Aleš Poklukar, Dimitar Stoilkov, Krištof Špenko in Maks Valenčič.
 	</p>
 	<p>
-				Pri projektih S Piškom se učim programirati in Sistem za samodejno preverjanje programerskih nalog v letu 2023 pa so sodelovali mentorji mag. Matija Lokar, Miha Cirman iz podjetja CodeBrainer, Luka Avbreht iz podjetja AFLabs, dr. Tomaž Kosar iz Univerze v Mariboru, mag. Krištof Špenko iz Instituta Jožef Stefan ter študenti  Ignat Pocevski, Blaž Sovdat, Gregor Kuhelj, Alen Nemanič, Filip Bojko, Marija Jezeršek, Marta Gelebeshova, Lucija Baša, Matic Tonin, Gašper Lavrih, Jurij Nabergoj, 
+				Pri projektih S Piškom se učim programirati in Sistem za samodejno preverjanje programerskih nalog v letu 2023 pa so sodelovali mentorji mag. Matija Lokar, Miha Cirman iz podjetja CodeBrainer, Luka Avbreht iz podjetja AFLabs, dr. Tomaž Kosar iz Univerze v Mariboru, mag. Krištof Špenko ter študenti  Ignat Pocevski, Blaž Sovdat, Gregor Kuhelj, Alen Nemanič, Filip Bojko, Marija Jezeršek, Marta Gelebeshova, Lucija Baša, Matic Tonin, Gašper Lavrih, Jurij Nabergoj, 
 				Bernard Sovdat, Luka Dacar, Korl Železnikar, Nika Dremelj, Mateja Žvegler, Nera Husarević, Bogdan Bidovec, Žiga Černe in Marko Šmid.	
 	</p>
 
