--- a/2_Aktualno/NP_Aktualno_ZgObvest.html
+++ b/2_Aktualno/NP_Aktualno_ZgObvest.html
@@ -2,19 +2,14 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
-	<link class="task" type="text/css" rel="stylesheet" href="../../_common/modules/ext/bootstrap/css/bootstrap.min.css"/>
-	<script src="../../_common/modules/ext/jquery/1.7/jquery.min.js"></script>
-	<script src="../../_common/modules/ext/angular/angular.min.js"></script>
+	<link class="task" type="text/css" rel="stylesheet" href="../_common/modules/ext/bootstrap/css/bootstrap.min.css"/>
+	<script src="../_common/modules/ext/jquery/1.7/jquery.min.js"></script>
+	<script src="../_common/modules/ext/angular/angular.min.js"></script>
 	
-	<script src="../../_common/modules/ext/jschannel/jschannel.js"></script>
-	<script src="../../_common/modules/integrationAPI.01/official/platform-pr.js"></script>
-	<script src="../../_common/modules/pemFioi/static-task.js"></script>
+	<script src="../_common/modules/ext/jschannel/jschannel.js"></script>
+	<script src="../_common/modules/integrationAPI.01/official/platform-pr.js"></script>
+	<script src="../_common/modules/pemFioi/static-task.js"></script>
 	<title>Pišek - obvestila</title>
-	<style>
-		body {
-		  font-family: Arial, Helvetica, sans-serif;
-		}
-	</style>
 </head>
 <body>
 	<h1>Stara obvestila</h1>
