--- a/1_O_Pisku/NP_O_Pisku_FAQ.html
+++ b/1_O_Pisku/NP_O_Pisku_FAQ.html
@@ -11,17 +11,19 @@
 	<title>Pišek - učbenik</title>
 </head>
 <body>
+	<div class="container">
 	<h1>Pogosta vprašanja
 	<p> 
 	       Vprašajte nas na: 
     </p>
-	        <div style="background-color: rgba(130,191,43,0.3); padding: 1em; font-weight: bold">
-            <h4>Portal za zgodnje učenje programskih konceptov</h4>
-            <p> 
-                Kontakt: <a href="mailto:matija.lokar@fmf.uni-lj.si">matija.lokar@fmf.uni-lj.si</a><br> 
-                &#8195;&#8195;&#8195;&#8195; <a href="mailto:pisek@acm.si">pisek@acm.si</a>
-            </p>
-        </div>
+	<div style="background-color: rgba(130,191,43,0.3); padding: 1em; font-weight: bold">
+	<h4>Portal za zgodnje učenje programskih konceptov</h4>
+	<p> 
+		Kontakt: <a href="mailto:matija.lokar@fmf.uni-lj.si">matija.lokar@fmf.uni-lj.si</a><br> 
+		&#8195;&#8195;&#8195;&#8195; <a href="mailto:pisek@acm.si">pisek@acm.si</a>
+	</p>
+	</div>
+	</div>
 </body>
 </html>	
 
