--- a/1_O_Pisku/NP_O_Pisku_Pokrovitelji.html
+++ b/1_O_Pisku/NP_O_Pisku_Pokrovitelji.html
@@ -12,6 +12,7 @@
 	<title>Pišek - učbenik</title>
 </head>
 <body>
+	<div class="container">
 	<h1>Za Piška skrbijo tudi ...</h1>
      Poleg (tu neimenovanih podpornikov in sodelavcev) ter na drugih mestih omenjenih sodelujočih, ki so
 	 vedno opravili več dela, kot je od njih zahteval projekt (ali pa v projekt sploh niso bili uradno vključeni),
@@ -55,6 +56,7 @@
                     <img src="UL-FMF.jpg" height="100px">
                 </p>
             </p>
+    </div>
 </body>
 </html>	
 
