--- a/1_O_Pisku/NP_O_Pisku_Sodelujoči.html
+++ b/1_O_Pisku/NP_O_Pisku_Sodelujoči.html
@@ -12,6 +12,7 @@
 	<title>Pišek - učbenik</title>
 </head>
 <body>
+	<div class="container">
 	<h1>Sodelujoči</h1>
 	<p> Portal Pišek je nastal leta 2018 kot posledica razgovorov Matije Lokarja in Andreja Brodnika 
 		Idejo je Matija Lokar razvil s pomočjo Gregorja Jeršeta in Jerneja Vičiča, ki so na 
@@ -24,7 +25,7 @@
 				Pri projektih S Piškom se učim programirati in Sistem za samodejno preverjanje programerskih nalog v letu 2023 pa so sodelovali mentorji mag. Matija Lokar, Miha Cirman iz podjetja CodeBrainer, Luka Avbreht iz podjetja AFLabs, dr. Tomaž Kosar iz Univerze v Mariboru, mag. Krištof Špenko ter študenti  Ignat Pocevski, Blaž Sovdat, Gregor Kuhelj, Alen Nemanič, Filip Bojko, Marija Jezeršek, Marta Gelebeshova, Lucija Baša, Matic Tonin, Gašper Lavrih, Jurij Nabergoj, 
 				Bernard Sovdat, Luka Dacar, Korl Železnikar, Nika Dremelj, Mateja Žvegler, Nera Husarević, Bogdan Bidovec, Žiga Černe in Marko Šmid.	
 	</p>
-
+	</div>
 </body>
 </html>	
 
