--- a/2_Aktualno/NP_Aktualno_Obvestila.html
+++ b/2_Aktualno/NP_Aktualno_Obvestila.html
@@ -12,11 +12,13 @@
 	<title>Pišek - obvestila</title>
 </head>
 <body>
+	<div class="container">
 	<h1>Aktualna obvestila</h1>
 	<ul>
 	    <li><b>09. 7.</b>Trenutno AAI prijava še ne deluje v svoji polnosti ... Delamo na tem!</li>
     	<li><b>15. 7.</b>Pripravljena in objavljena končna struktura Novega Piška </li>
 	</ul>
+	</div>
 </body>
 </html>	
 
