--- a/2_Aktualno/NP_Aktualno_ZgObvest.html
+++ b/2_Aktualno/NP_Aktualno_ZgObvest.html
@@ -12,11 +12,13 @@
 	<title>Pišek - obvestila</title>
 </head>
 <body>
+	<div class="container">
 	<h1>Stara obvestila</h1>
 	<ul>
 	    <li><b>01. 7.</b>Omogočena AAI prijava.</li>
     	<li><b>15. 6.</b>Poskusno zagnan Novi Pišek. je v globoki alfa različici in veliko stvari še ne deluje...</li>
 	</ul>
+	</div>
 </body>
 </html>	
 
