--- a/3_Tekmovanja/NP_Tekmovanja_SezTek.html
+++ b/3_Tekmovanja/NP_Tekmovanja_SezTek.html
@@ -12,6 +12,7 @@
 	<title>Tekmovanja - trenutna</title>
 </head>
 <body>
+	<div class="container">
 	<h1>Prejšnja tekmovanja</h1>
 	
 	<p>S pomočjo Piška smo izvedli naslednja tekmovanja</p>
@@ -23,9 +24,11 @@
 	<p>Glej tudi <a href = "https://pisek.acm.si/contents/4907-319805995281415931/">"stari" Pišek</a>
 	</p>
 	<p>Za druga tekmovanja <a href = "https://tekmovanja.acm.si/koledar">glej tudi tukaj</a>. 
+	</p>
+	</div>
 </body>
-</html>	
-
+</html>
+	
 		 
 		  
 		  
