--- a/3_Tekmovanja/NP_Tekmovanja_TrenTek.html
+++ b/3_Tekmovanja/NP_Tekmovanja_TrenTek.html
@@ -12,6 +12,7 @@
 	<title>Tekmovanja - trenutna</title>
 </head>
 <body>
+	<div class="container">
 	<h1>Tekmovanja</h1>
 	
 	<p>V tem trenutku ne poteka nobeno tekmovanje. Načrtovana so:</p>
@@ -23,6 +24,8 @@
 	<p>Glej tudi <a href = "https://pisek-novi.acm.si/sl/activities/by-id/4794184321365736010">seznam prejšnjih tekmovanj.</a>
 	</p>
 	<p>Za druga tekmovanja <a href = "https://tekmovanja.acm.si/koledar">glej tudi tukaj</a>. 
+	</p>
+	</div>
 </body>
 </html>	
 
