--- a/4_Naloge/1_Zgodbe/NP_Naloge_O_sklopu_Zgodbe.html
+++ b/4_Naloge/1_Zgodbe/NP_Naloge_O_sklopu_Zgodbe.html
@@ -17,11 +17,13 @@
 	</style>
 </head>
 <body>
+	<div class="container">
 	<h1>O Zgodbah</h1>
 	 <p>
 	     V sklopu Zgodbe najdemo več različnih avtorskih sklopov nalog (Pišek, Robot, Ples, Tabornik, Zmajček,
 		 Gosenica Eva, Gasilka... ), oblikovanih in ustvarjenih s strani študentov in študentk pri več projektih.
 	 </p>
+	 </div>
 </body>
 </html>	
 
