--- a/4_Naloge/2_Programski koncepti/Enostavna zanka s štetjem (FOR ali WHILE)/PK_2_Opis.HTML
+++ b/4_Naloge/2_Programski koncepti/Enostavna zanka s štetjem (FOR ali WHILE)/PK_2_Opis.HTML
@@ -11,10 +11,12 @@
 	</style>
 </head>
 <body>
+	<div class="container">
 	<h1>Enostavna zanka s štetjem (FOR ali WHILE)</h1>
 	 <p>
 	     Telo zanke se ponavlja določeno število-krat, ponovi določeno število krat	 
 	 </p>
+	 </div>
 </body>
 </html>	
 
