--- a/4_Naloge/2_Programski koncepti/NP_Naloge_ProKon_O_delitvi_na_PK.html
+++ b/4_Naloge/2_Programski koncepti/NP_Naloge_ProKon_O_delitvi_na_PK.html
@@ -17,6 +17,7 @@
 	</style>
 </head>
 <body>
+	<div class="container">
 	<h1>O delitvi na programske koncepte</h1>
 	 <p>
 	     V sklopu Programski koncepti so naloge razdeljene po programskih konceptih. Trenutno imamo 21 konceptov in sicer:
@@ -52,6 +53,7 @@
 
 		<p>
 	 </p>
+	 </div>
 </body>
 </html>	
 
