--- a/4_Naloge/2_Programski koncepti/Zaporedje ukazov/PK_1_Opis.HTML
+++ b/4_Naloge/2_Programski koncepti/Zaporedje ukazov/PK_1_Opis.HTML
@@ -11,10 +11,12 @@
 	</style>
 </head>
 <body>
+	<div class="container">
 	<h1>Zaporedje ukazov</h1>
 	 <p>
 	     Premikanje, obračanje, akcija (npr. poberi, pobarvaj)	 
 	 </p>
+	 </div>
 </body>
 </html>	
 
