--- a/5_International_Mednarodno/Competizione_Pišek_Verseny.html
+++ b/5_International_Mednarodno/Competizione_Pišek_Verseny.html
@@ -12,6 +12,7 @@
 	<title>Informazioni su Pišek/Pišekről</title>
 </head>
 <body>
+	<div class="container">
 	<h1>Informazioni su Pišek/Pišekről</h1>
 	<p> 
 	     TODO!!!!  Tekmovanja v programiranju z delčki se udeležujejo tudi učenci in dijaki šol ----
@@ -22,6 +23,7 @@
                 Contacts: <a href="mailto:matija.lokar@fmf.uni-lj.si">matija.lokar@fmf.uni-lj.si</a><br> 
                 &#8195;&#8195;&#8195;&#8195; <a href="mailto:pisek@acm.si">pisek@acm.si</a>
 </p>
+</div>
 </body>
 </html>	
 
