--- a/4_Naloge/3_Nova_pot_1/NP_Naloge_O_sklopu_NP1.html
+++ b/4_Naloge/3_Nova_pot_1/NP_Naloge_O_sklopu_NP1.html
@@ -17,6 +17,7 @@
 	</style>
 </head>
 <body>
+	<div class="container">
 	<h1>Nova pot 1</h1>
 	 <p>
 	     Ta sklop je še prazen in čaka na dobro idejo delitve nalog. Veseli bomo vaših predlogov! 
@@ -25,6 +26,7 @@
          Kontakt: <a href="mailto:matija.lokar@fmf.uni-lj.si">matija.lokar@fmf.uni-lj.si</a><br> 
         &#8195;&#8195;&#8195;&#8195; <a href="mailto:pisek@acm.si">pisek@acm.si</a>
      </p>
+	 </div>
 </body>
 </html>	
 
