--- a/5_International_Mednarodno/NP_INT_AboutPisek.html
+++ b/5_International_Mednarodno/NP_INT_AboutPisek.html
@@ -12,6 +12,7 @@
 	<title>About Pišek</title>
 </head>
 <body>
+	<div class="container">
 	<h1>What is Pišek?</h1>
 	<p> Pišek /Chick/ is an innovative platform that was established in 2018 with a profound vision: 
 	to provide Slovenian schools with an environment where beginners can easily dive into the world of 
@@ -34,6 +35,7 @@
 		their problem-solving abilities and hones their programming skills through exciting challenges.
 		</li>
 	</ul>
+	</p>
     <p>To cater to organizational and technical requirements, the Pišek portal currently operates on two systems. 
 	The first is <a href = "https://pisek-novi.acm.si/">pisek-novi.acm.si</a> [the system you are currently using],
 	a testing platform where we experiment 
@@ -55,10 +57,12 @@
 	innovators and creators. Together, let's unlock the extraordinary potential within each learner and inspire 
 	a generation of programming enthusiasts.
 	</p>
-<p> 
+		<p> 
                 Contacts: <a href="mailto:matija.lokar@fmf.uni-lj.si">matija.lokar@fmf.uni-lj.si</a><br> 
                 &#8195;&#8195;&#8195;&#8195; <a href="mailto:pisek@acm.si">pisek@acm.si</a>
-</p>
+		</p>
+
+</div>
 </body>
 </html>	
 
