Fixed bugg with triggering paint and numbers.

--- a/NoveZgodbe/Gumbi/orientacija/index.html
+++ b/NoveZgodbe/Gumbi/orientacija/index.html
@@ -25,7 +25,7 @@
 				"id": "",						//url naloge
 				"language": "sl",
 				"version": "sl.01",
-				"authors": "Tea Bela Kočar",				//avtor
+				"authors": "",				//avtor
 				"translators": [],
 				"license": "",
 				"taskPathPrefix": "",
