Finalized NoveZgodbe/Gumbi category.

--- a/NoveZgodbe/Gumbi/zbijanje_keglov/index.html
+++ b/NoveZgodbe/Gumbi/zbijanje_keglov/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
 		<meta charset="utf-8">	<!-- določimo način kodiranja znakov v besedilu naloge -->
-		<title>normal_example</title> <!-- pod naslov zapišemo ime mape v kateri se nahajo datoteke za posamezno nalogo -->
+		<title>zbijanje_keglov</title> <!-- pod naslov zapišemo ime mape v kateri se nahajo datoteke za posamezno nalogo -->
 		<script>
 			window.stringsLanguage = 'sl'; //izberemo jezik za besedila ukazov in sporočil
 		</script>
@@ -50,7 +50,7 @@
     
 	<body onresize="task.displayedSubTask.updateScale()">
 		<div id="task">
-            <h1>Bowling arena</h1>  <!-- Naslov naloge -->
+            <h1>Zbijanje keglov 2</h1>  <!-- Naslov naloge -->
 			<div id="tabsContainer"></div>
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
