--- a/NoveZgodbe/Gumbi/zbijanje_keglov_2/index.html
+++ b/NoveZgodbe/Gumbi/zbijanje_keglov_2/index.html
@@ -2,14 +2,14 @@
 <html>
    <head>
 		<meta charset="utf-8">	<!-- določimo način kodiranja znakov v besedilu naloge -->
-		<title>normal_example</title> <!-- pod naslov zapišemo ime mape v kateri se nahajo datoteke za posamezno nalogo -->
+		<title>pobiranje_keglov_2</title> <!-- pod naslov zapišemo ime mape v kateri se nahajo datoteke za posamezno nalogo -->
 		<script>
 			window.stringsLanguage = 'sl'; //izberemo jezik za besedila ukazov in sporočil
 		</script>
 			
 		<!-- Tukaj kličemo knjižnice potrebne za delovanje spletne strani -->
 		<script class="remove" type="text/javascript" src="../../../_common/modules/pemFioi/importModules-1.4-mobileFirst.js" id="import-modules"></script> 
-		<!-- <script class="remove" type="text/javascript" src="../../../_common/modules/pemFioi/importModules-1.5.js" id="import-modules"></script>  -->
+		<!-- <script class="remove" type="text/javascript" src="../../../../_common/modules/pemFioi/importModules-1.5.js" id="import-modules"></script>  -->
 		<script class="remove" type="text/javascript">
 			var modulesPath = '../../../_common/modules/'
 			importModules([
@@ -50,20 +50,12 @@
     
 	<body onresize="task.displayedSubTask.updateScale()">
 		<div id="task">
-            <h1>Bowling arena z ovirami</h1>  <!-- Naslov naloge -->
+            <h1>Bowling arena</h1>  <!-- Naslov naloge -->
 			<div id="tabsContainer"></div>
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
 					<p>
-						Pomagaj robotu pospraviti vse keglje na stezo. Preden pa pride na stezo, si mora najprej robot odpreti vratca z gumbom.<br>
-
-						MANJKA FUNKCIJA ZA robotEndConditions.checkGreenArea, da bi preveril al se vrne na začetek.<br>
-
-						Če daš gumbu, da je category: {'button':true, 'obstacle':true} javi takoj napako, "Pazi ovira.", tudi če ni nobene ovire razen Gumba na mreži.<br>
-
-						Če gumbu spremeniš value v oviro po tem ko ga prižgeš, javi isto napako takoj za prižigom gumba, program teče dalje<br>
-
-						Če daš coin kategorijo category: {'coin':true, 'obstacle':true}, ko stopi na gumb javi napako "Pazi ovira".
+						Pomagaj robotu pospraviti vse keglje na stezo.
 					</p>
 				</div>
 				<div id="gridContainer"></div>
