new text for 2Dplatformer

--- a/NoveZgodbe/2Dplatformer/kanjon/index.html
+++ b/NoveZgodbe/2Dplatformer/kanjon/index.html
@@ -50,13 +50,16 @@
     
 	<body onresize="task.displayedSubTask.updateScale()">
 		<div id="task">
-            <h1>Kanjon</h1>  <!-- Naslov naloge -->
+            <h1>Kavboj Piki v kanjonu</h1>  <!-- Naslov naloge -->
 			<div id="tabsContainer"></div>
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
 					<p>
-						udeleženci sestavijo program, s katerim pomikajo lik po mreži in mu podajo navodila, kako naj opravi zahtevana opravila.
-
+						Kavboj Piki je na zahtevni misiji sredi divjega zahoda.
+						V prostrani puščavi mu pot kažejo le zelene zastavice. 
+						A ker Piki, želi na poti zbrati tudi vse skrite zvezdice, je naloga še nekoliko težja. 
+						Napiši program tako, da bo Piki pobral zvezdico, nato pa prišel nazaj na pravo pot do zastavice.
+						Namig: Piki ne rabi skakati navzdol, to je potrebno le takrat, ko se vzpenja.		 
 					</p>
 				
 				</div>
