Fixed infos bugg in library and added new examples with picking robot.

--- a/NoveZgodbe/pobiranje/streljanje_na_gol_2/index.html
+++ b/NoveZgodbe/pobiranje/streljanje_na_gol_2/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
 		<meta charset="utf-8">	<!-- določimo način kodiranja znakov v besedilu naloge -->
-		<title>normal_example</title> <!-- pod naslov zapišemo ime mape v kateri se nahajo datoteke za posamezno nalogo -->
+		<title>napredni_nogometni_trening_easy</title> <!-- pod naslov zapišemo ime mape v kateri se nahajo datoteke za posamezno nalogo -->
 		<script>
 			window.stringsLanguage = 'sl'; //izberemo jezik za besedila ukazov in sporočil
 		</script>
@@ -60,6 +60,7 @@
 					</p>
 					<p>
 						glej opombe.txt
+
 					</p>
 				</div>
 				<div id="gridContainer"></div>
