Update text Gumbi

--- a/NoveZgodbe/Gumbi/robot_pobira_vzorce/index.html
+++ b/NoveZgodbe/Gumbi/robot_pobira_vzorce/index.html
@@ -54,16 +54,13 @@
     
 	<body onresize="task.displayedSubTask.updateScale()">
 		<div id="task">
-            <h1>Pišek in gosenica</h1>  <!-- Naslov naloge -->
+            <h1>Robot pobira vzorce</h1>  <!-- Naslov naloge -->
 			<div id="tabsContainer"></div>
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
-					Pišek skrbi za svoje zdravje, zato gre vsako jutro v šolo s Pešbusom. 
-					To jutro Pišek ni slišal budilke in je prepozno vstal. 
-					Da ne zamudi pouka, ga mama odpelje z avtom. 
-					Z njima bo šla tudi Piškova prijateljica Gosenica, ki jo bosta pobrala po poti in jo peljala do avtobusne postaje.  
-					Pomagaj mami pripeljati Piška v šolo in Gosenico do avtobusne postaje. 
-					Število delčkov, ki jih pri nalogi lahko uporabiš, je omejeno, zato uporabi zanko.
+					NASA je na Mars poslala posebnega robota, ki mora pobrati vzorce peska, ki so jih vzeli njegovi predhodniki.
+					Napiši program, ki bo robota vodil po poti tako, da bo pobral vse vzorce. 
+					Namig: ko robot stopi na rdeče stikalo, se vrata na poti avtomatsko odprejo, zato poskusi napisati čim krajšo programsko kodo. 
 					<div>
 						
 					</div>
