--- a/NoveZgodbe/Gumbi/cebelica-obletava-roze/index.html
+++ b/NoveZgodbe/Gumbi/cebelica-obletava-roze/index.html
@@ -50,12 +50,14 @@
     
 	<body onresize="task.displayedSubTask.updateScale()">
 		<div id="task">
-            <h1>Čebelica obletava rože</h1>  <!-- Naslov naloge -->
+            <h1>Čebelica nabira cvetni prah</h1>  <!-- Naslov naloge -->
 			<div id="tabsContainer"></div>
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
 					<p>
-						Čebelica nabira nektar. Hoče obiskati vse tri rožice. Program je že napisan, a ima napake, oziroma mu manjkajo delčki. Popravi ga!
+						Čebelica nabira cvetni prah. 
+						Obiskati hoče vse štiri cvetlice. 
+						Napiši program, ki jo bo vodil do vseh cvetlic.
 					</p>
 				</div>
 				<div id="gridContainer"></div>
