--- a/NoveZgodbe/Gumbi/orientacija/index.html
+++ b/NoveZgodbe/Gumbi/orientacija/index.html
@@ -50,16 +50,20 @@
     
 	<body onresize="task.displayedSubTask.updateScale()">
 		<div id="task">
-            <h1>Pišek na orientaciji</h1>  <!-- Naslov naloge -->
+            <h1>Miha na orientacijskem tekmovanju</h1>  <!-- Naslov naloge -->
 			<div id="tabsContainer"></div>
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
 					<p>
-						Pišek se je udeležil orientacijskega tekmovanja. Ko prispe na polje s številko, mu to pove, v katero smer naj
-						gre (1 desno, 2 dol, 3 levo, 4 gor). Na naslednjem polju izve, koliko korakov je do kontrolne točke. Na
-						kontrolni točki dobi nagradne točke. Na naslednjem polju izve novo smer gibanja. Ko nabere 20 točk ali več,
-						je uspešno opravil nalogo!						<br>
-						Manjka ponovno pogoj, da pride do Miha (checkGreeenArea v prejšnji knjižnjici).			
+						Miha se je udeležil radioamaterskega orientacijskega tekmovanja. 
+						Pri prijavi je dobil sledeča navodila: 
+						Cilj je priti do zastavice, ki te čaka na koncu poti. 
+						Hodi naprej dokler ne prideš do barvnega polja.
+						Barva polja ti pove, v kateri smeri se nahaja polje z gumbom (rdeča: vzhod; zelena: zahod; modra: sever in rumena: jug).
+						Pot nadaljuj v tej smeri, dokler ne dosežeš gumba. Ob pritisku gumba, gumb spremeni zadnjo barvo. 
+						Vrni se na prejšnje polje z barvo. Nova barva polja tokrat pove, v kateri smeri smeri nadaljuj pot. 
+						Postopek ponavljaj, dokler ne dosežeš polja z zastavico. 
+						Program in funkcija sta že napisana, popravi ju. 	
 					</p>
 				</div>
 				<div id="gridContainer"></div>
