--- a/NoveZgodbe/Gumbi/zbijanje_keglov/index.html
+++ b/NoveZgodbe/Gumbi/zbijanje_keglov/index.html
@@ -50,12 +50,15 @@
     
 	<body onresize="task.displayedSubTask.updateScale()">
 		<div id="task">
-            <h1>Zbijanje keglov 2</h1>  <!-- Naslov naloge -->
+            <h1>Zbijanje keglov</h1>  <!-- Naslov naloge -->
 			<div id="tabsContainer"></div>
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
 					<p>
-						Pomagaj robotu pospraviti vse keglje na stezo.
+						Pišek med počitnicami dela v kegljaškem centru. 
+						Ko mu je dolgčas rad sestavlja različne programe, s katerimi programira delovanje kegljaških stez. 
+						Napiši program, ki žogo premakne do rdečega gumba, da se odpre pregrada, nato pa čim hitreje zbije vse keglje. 
+						Žoga se lahko premika tudi diagonalno.
 					</p>
 				</div>
 				<div id="gridContainer"></div>
