Update text in pobiranje

--- a/NoveZgodbe/pobiranje/pisek_razvrsca_jajca/index.html
+++ b/NoveZgodbe/pobiranje/pisek_razvrsca_jajca/index.html
@@ -55,7 +55,10 @@
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
 					<p>
-						Pomogaj pisku razvrstiti jajca.
+						Pišek obožuje velikonočne praznike. Iskanje velikonočnih jajčk je njegova najljubša igra. 
+						Popravi program tako, da bo Pišek pospravil vsak jajček v pripadajočo istobarvno košaro.
+						Namig: Pišek lahko nosi več jajčk hrati, a najprej bo odložil vedno tistega, ki ga je pobral kot zadnjega 
+						(npr. če je pobral najprej roza in nato modro jajce, bo najprej odložil modrega in nato roza). 
 					</p>
 				
 				</div>
