--- a/NoveZgodbe/pobiranje/raztrescena_raketa/index.html
+++ b/NoveZgodbe/pobiranje/raztrescena_raketa/index.html
@@ -54,14 +54,16 @@
     
 	<body onresize="task.displayedSubTask.updateScale()">
 		<div id="task">
-            <h1>Pobiranje kapsul</h1>  <!-- Naslov naloge -->
+            <h1>Razrtreščena raketa</h1>  <!-- Naslov naloge -->
 			<div id="tabsContainer"></div>
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
 					<p >
 						Robot je naletel na razbitine rakete, ki se je raztreščila ob zasilnem pristanku. 
-						Pomagaj robotu zbrati razibitne, da lahko raketo popravi in zapusti Luno. 
-						Robot dele rakete pobere, ko se premakne na polje z njimi. 
+						Pomagaj robotu zbrati razbitne, da lahko raketo popravi in zapusti Mars.
+						Pazi: robot mora razbitine pobrati v točno določenem vrstnem redu in sicer od spodaj navzgor: 
+						najprej pobere pogon rakete, nato krila, kabino in na koncu zgornjo konico. 
+						Le v takem vrstem redu bo namreč lahko raketo popravil in zapustil Mars.  
               </p>
 					<div>
 						
