--- a/NoveZgodbe/pobiranje/streljanje_na_gol_2/index.html
+++ b/NoveZgodbe/pobiranje/streljanje_na_gol_2/index.html
@@ -56,12 +56,10 @@
 				<div id="taskIntro"> <!-- Besedilo naloge -->
 					<p>
 						Lučka zelo rada igra nogomet, želi pa se še izboljšati, zato vsak dan doma trenira vodenje žoge. 
-						Pomagaj ji voditi žogo med drevesi in vse do gola. 
+						Popravi program tako, da bo Lučka uspešno zadela gol. 
+						Namig: Lučka ne more na polje s stožci, lahko pa skozi to polje leti žoga pri steljanju na gol. 
 					</p>
-					<p>
-						glej opombe.txt
 
-					</p>
 				</div>
 				<div id="gridContainer"></div>
 				<div id="blocklyLibContent"></div>
