--- a/NoveZgodbe/vec-junakov/gosenica_gre_v_solo/index.html
+++ b/NoveZgodbe/vec-junakov/gosenica_gre_v_solo/index.html
@@ -54,16 +54,14 @@
     
 	<body onresize="task.displayedSubTask.updateScale()">
 		<div id="task">
-            <h1>Pišek in gosenica</h1>  <!-- Naslov naloge -->
+            <h1>Gosenica in Avtobus</h1>  <!-- Naslov naloge -->
 			<div id="tabsContainer"></div>
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
-					Pišek skrbi za svoje zdravje, zato gre vsako jutro v šolo s Pešbusom. 
-					To jutro Pišek ni slišal budilke in je prepozno vstal. 
-					Da ne zamudi pouka, ga mama odpelje z avtom. 
-					Z njima bo šla tudi Piškova prijateljica Gosenica, ki jo bosta pobrala po poti in jo peljala do avtobusne postaje.  
-					Pomagaj mami pripeljati Piška v šolo in Gosenico do avtobusne postaje. 
-					Število delčkov, ki jih pri nalogi lahko uporabiš, je omejeno, zato uporabi zanko.
+					Gosenica skrbi za svoje zdravje, zato gre vsako jutro v šolo s Pešbusom. 
+					To jutro ni slišala budilke in je prepozno vstala. 
+					Da ne zamudi pouka, mora hitro ujeti šolski avtobus.  
+					Napiši program, ki bo gosenico usmeril do avtobusne postaje, kjer jo bo pobral avtobus in jo odložil v šoli. 
 					<div>
 						
 					</div>
