Add text in vec junakov

--- a/NoveZgodbe/vec-junakov/Tacko_in_skrivalnice/index.html
+++ b/NoveZgodbe/vec-junakov/Tacko_in_skrivalnice/index.html
@@ -55,9 +55,9 @@
 			<div id="taskContent">
 				<div id="taskIntro"> <!-- Besedilo naloge -->
 					<p>
-						Marko se v gozdu s svojim psičkom Tačkom rad igra skrivalnice. Napiši program, ki bo Tačkov izostreni smrček vodil do vseh priboljškov in ga pripeljal do svojega lastnika. Pazi, število delčkov je omejeno, zato si dobro oglej sliko in poišči vzorec.
-						<br>
-						Manjka ponovno pogoj, da pride do Miha (checkGreeenArea v prejšnji knjižnjici).			
+						Marko se rad igra s svojim psičkom Tačkom. 
+						Napiši program, ki bo Tačka in Markota vodil do gumba, s katerim bosta en drugemu odprla prehod na travnik.
+						Marko mora Tačka privezati pobrati in skupaj morata doseči zeleno zastavico. 		
 					</p>
 				</div>
 				<div id="gridContainer"></div>
