--- a/NoveZgodbe/Predlogi2024/Utrujena posast(konec)/index.html
+++ b/NoveZgodbe/Predlogi2024/Utrujena posast(konec)/index.html
@@ -39,7 +39,7 @@
 		<!-- Pot do grafik -->	
 		<script> var imgPath=""; </script>
 		<!-- Tukaj uvozimo knjiznico -->	
-		<script class="remove" type="text/javascript" src="_library/blocklyRobot_lib.js" id="blocklyRobot_lib"></script>
+		<script class="remove" type="text/javascript" src="blocklyRobot_lib.js" id="blocklyRobot_lib"></script>
 		<!-- Tukaj kličemo datoteko, kjer definiramo problem naloge -->		
 		<script type="text/javascript" src="task.js"></script>
 		<script>
