--- a/NoveZgodbe/Predlogi2024/FR/Rumena/cebelica-isce-cvet-1/index.html
+++ b/NoveZgodbe/Predlogi2024/FR/Rumena/cebelica-isce-cvet-1/index.html
@@ -37,7 +37,7 @@
 		</script>
 			
 		<!-- Pot do grafik -->	
-		<script> var imgPath="/"; </script>
+		<script> var imgPath=""; </script>
 		<!-- Tukaj uvozimo knjiznico -->	
 		<script class="remove" type="text/javascript" src="blocklyRobot_lib.js" id="blocklyRobot_lib"></script>
 		<!-- Tukaj kličemo datoteko, kjer definiramo problem naloge -->		
